--- a/tech_headset.html
+++ b/tech_headset.html
@@ -351,24 +351,16 @@
                         <div class="row">
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
 
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B089TFBX6P&asins=B089TFBX6P&linkId=53f466559aed0f5cc2b53e34672e3303&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07Q33B1LF&asins=B07Q33B1LF&linkId=7595d58190a1282f431b9f609dbaffd6&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                              <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B0868TH9SD&asins=B0868TH9SD&linkId=83e745d98a78d55f8f7a9c235d186f33&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" margi respnwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07XRDKDW6&asins=B07XRDKDW6&linkId=19b7b63c50f0d11885946d97dc16fe88&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
 
 
@@ -376,24 +368,16 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B01M9DROES&asins=B01M9DROES&linkId=61fa5a3a65d1967b00db4d3a1f896d42&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B081QWM3WN&asins=B081QWM3WN&linkId=0b2342e1584079e558c4b32461fd4b4c&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07C2VJXP4&asins=B07C2VJXP4&linkId=03b21de8d6804e1a6d187f85e4b82c7e&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07Z89SKHT&asins=B07Z89SKHT&linkId=8d1628cf222bb8c83c0dbe0a5c6cf4ff&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
 
 
@@ -401,24 +385,16 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07SF1X921&asins=B07SF1X921&linkId=7b12a702bfe9e5e0307e7356b6147944&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwi respdth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07MZQ5F8S&asins=B07MZQ5F8S&linkId=1f9ccfd3fca01a2725f8130523771acb&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                              <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07HH223KV&asins=B07HH223KV&linkId=a028817f34145c658ff41b6fcb803817&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                                 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KXR889N&asins=B07KXR889N&linkId=57f996960c499da0fb71ebd37f72b43b&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
 
 
